--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +19,74 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.category-card {
+  border-radius: 16px;
+  box-shadow: 0 30px 30px -25px rgba(65, 51, 183, 0.25);
+  width: 350px;
+  max-width: 300px;
+  height: 300px;
+  background-color: #f6f1f1;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.category-card .tag {
+  display: inline-block;
+  background-color: #6874e8;
+  color: #eeeeee;
+  font-weight: 600;
+  font-size: 0.875rem;
+  padding: 0.5em 0.75em;
+  line-height: 1;
+  border-radius: 6px;
+  margin-right: 0.5rem;
+}
+.tag + * {
+  margin-top: 1rem;
+}
+.category-card h2 {
+  font-size: 1.5rem;
+  color: #202020;
+  line-height: 1.25;
+}
+.category-card h2 + * {
+  margin-top: 1rem;
+}
+.category-card p {
+  color: #202020;
+}
+.category-card p + * {
+  margin-top: 1.25rem;
+}
+.category-card button {
+  font: inherit;
+  line-height: 1;
+  background-color: #eeeeee;
+  border: 2px solid #6874e8;
+  color: #6874e8;
+  padding: 0.5em 1em;
+  border-radius: 6px;
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+.category-card button:hover,
+.category-card button:focus {
+  background-color: #146c94;
+  color: #eeeeee;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(33.3%, auto));
+  width: 1100px;
+  max-width: 100%;
 }
